--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "add": "^2.0.6",
+    "axios": "^0.19.2",
     "bulma": "^0.9.0",
     "classnames": "^2.2.6",
     "cross-env": "^7.0.2",
