--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "yarn": "^1.22.4"
   },
   "scripts": {
-    "start": "NODE_PATH=./src react-scripts start",
+    "start": "cross-env NODE_PATH=./src react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
