--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-loadable": "^5.5.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
+    "react-to-print": "^2.10.0",
     "yarn": "^1.22.4"
   },
   "scripts": {
