--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "classnames": "^2.2.6",
     "cross-env": "^7.0.2",
     "formik": "^2.1.5",
+    "moment": "^2.29.1",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
@@ -24,6 +25,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "react-to-print": "^2.10.0",
+    "underscore": "^1.11.0",
     "yarn": "^1.22.4"
   },
   "scripts": {
